--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,9 @@
 services:
   - type: web
-    name: employment-service
+    name: sluzba
     env: python
     plan: free
-    buildCommand: pip install -r requirements.txt && python manage.py collectstatic --noinput && python manage.py migrate
+    buildCommand: pip install --upgrade pip && pip install -r requirements.txt && python manage.py collectstatic --noinput && python manage.py migrate
     startCommand: gunicorn employment_project.wsgi:application
     envVars:
       - key: DJANGO_SETTINGS_MODULE
@@ -11,4 +11,6 @@ services:
       - key: SECRET_KEY
         generateValue: true
       - key: PYTHON_VERSION
-        value: 3.11.0
+        value: 3.11.9
+      - key: RENDER
+        value: true
